[update] 시큐리티 설정